entries/static/entries/css/h-entry.styl
ol.entries, div.entry
	max-width 100%
	display flex
	margin-bottom 0
	flex 1
	flex-direction column
	justify-content center
	> li
		margin-bottom 1rem
		&:last-child
			margin-bottom 0

.h-entry.media
	> aside.info
		display flex
		flex-direction column
		align-items center
		font-size 0.8rem
		margin-right 1rem

		a.p-author
			text-align center
			img.u-photo
				border-radius .25rem
				height 3em
		> *
			margin-bottom .25rem
	> .card
		flex 1
	.e-content
		ul
			list-style-type disc
		ul, ol
			margin-bottom 1rem
			ul
				list-style-type circle
			ul, ol
				margin-bottom 0
				ul
					list-style-type square
		img
			max-width 100%
		> :last-child
			margin-bottom 0

